# simple

./: .gitignore  CMakeLists.txt  Cargo.toml  Justfile  README.md  build.rs  generate.sh  script.js
example/: README.md  tailwind.config.js
example/src/components/: Comp.component.html  Comp.html  HelloWorld.component.html  HelloWorld.html  Some.component.html  Svg.component.html
example/src/components/Fold/: Some.html
example/src/data/: Posts.data.toml  Something.data.json  a.json
example/src/data/Posts/: advanced-features.md  getting-started.md  my-first-post.md
example/src/pages/: index.html  page.html
example/src/pages/folder/: a.html
example/src/public/: output.css  styles.css
example/src/templates/: Posts.frame.html  Posts.template.html  Something.html  Something.template.html  a.html
include/: error.hpp  minify.hpp  new.hpp  utils.hpp  version.hpp.in
include/handlers/: components.hpp  entries.hpp  frontmatter.hpp  katex_assets.hpp  markdown.hpp  pages.hpp  templates.hpp
src/: component_handler.rs  dev.html  dev.rs  error.cpp  error.rs  main.cpp  main.rs  markdown.rs  minify.cpp  new.cpp  new.rs  page_processor.rs  template_handler.rs  utils.cpp  utils.rs
src/dev/: inline_script.html  mod.rs
src/handlers/: components.cpp  components.rs  entries.cpp  entries.rs  frontmatter.cpp  frontmatter.rs  katex_assets.cpp  katex_assets.rs  markdown.cpp  markdown.rs  pages.cpp  pages.rs  templates.cpp  templates.rs
