[package]
name = "simple-web"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Tnixc/simple"
description = "A simple build tool that assembles a static site from components, templates, and data."
authors = ["Tnixc <tnixxc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.6"
comrak = "0.26.0"
fancy-regex = "0.13.0"
katex = "0.4"
minify-html = "0.15.0"
notify = "6.1.1"
num_cpus = "1.16.0"
once_cell = "1.20.2"
rouille = "3.6.2"
serde_json = "1.0.120"
simple-websockets = "0.1.6"

[[bin]]
name = "simple"
path = "src/main.rs"

