[package]
name = "simple-web"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/Tnixc/simple"
description = "A simple build tool that assembles a static site from components, templates, and data."
authors = ["Tnixc <tnixxc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.6"
comrak = "0.47.0"
fancy-regex = "0.16.2"
katex = "0.4"
minify-html = "0.18.1"
notify = "8.2.0"
num_cpus = "1.16.0"
once_cell = "1.20.2"
rayon = "1.10"
rouille = "3.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9"
simple-websockets = "0.1.6"
toml = "0.9"

[[bin]]
name = "simple"
path = "src/main.rs"

